Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-63

InkAPI uses INK_EVENT_IMMEDIATE instead of EVENT_CONT just because they are both 1

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 2.1.3
    • TS API
    • None

    Description

      For some reason the InkAPI and the examples use INK_EVENT_IMMEDIATE as a return value
      when it should be an event argument to handleEvent. They should be using EVENT_CONT
      which just so happens to also be 1 but is a return value. it doesn't even make sense as
      INK_EVENT_IMMEDIATE is used to indicate that an eventProcessor.schedule_imm()
      has occured (hence the name) while EVENT_CONT indicates that the processor can
      call with more events as compared to EVENT_DONE which indicates that it shouldn't,
      perhaps because the Continuation nolonger exists.

      Attachments

        Activity

          People

            jplevyak John Plevyak
            jplevyak John Plevyak
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: