TS-63: change INK_EVENT_IMMEDIATE return value to INK_SUCCESS.  It is ignored in any case, but INK_EVENT_IMMEDIATE is not supposed to be a return value.

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@992448 13f79535-47bb-0310-9956-ffa450edef68